--- a/python/docs.h.template
+++ b/python/docs.h.template
@@ -258,6 +258,14 @@ Returns
 {{finite-element.h > base_transformations > return : dict}}
 )";
 
+{{DOCTYPE}} FiniteElement__get_tensor_product_representation = R"(
+{{finite-element.h > get_tensor_product_representation > doc}}
+
+Returns
+=======
+{{finite-element.h > get_tensor_product_representation > return : List[Tuple[List[basix.FiniteElement], List[int]]]}}
+)";
+
 {{DOCTYPE}} create_element__family_cell_degree_discontinuous = R"(
 {{finite-element.h > create_element(family, cell, degree, discontinuous) > doc}}
 
