--- a/python/docs.h.template
+++ b/python/docs.h.template
@@ -354,6 +354,21 @@ Returns
 {{polyset.h > tabulate > return : numpy.ndarray[numpy.float64]}}
 )";
 
+{{DOCTYPE}} tabulate_polynomials = R"(
+{{polynomials.h > tabulate > doc}}
+
+Parameters
+==========
+{{polynomials.h > tabulate > param > polytype : basix.PolynomialType}}
+{{polynomials.h > tabulate > param > celltype : basix.CellType}}
+{{polynomials.h > tabulate > param > d : int}}
+{{polynomials.h > tabulate > param > x : numpy.ndarray[numpy.float64]}}
+
+Returns
+=======
+{{polynomials.h > tabulate > return : numpy.ndarray[numpy.float64]}}
+)";
+
 {{DOCTYPE}} make_quadrature__rule_celltype_m = R"(
 {{quadrature.h > make_quadrature(rule, celltype, m) > doc}}
 
