--- a/python/docs.h.template
+++ b/python/docs.h.template
@@ -330,6 +330,25 @@ Returns
 {{finite-element.h > create_element(family, cell, degree, dvariant, discontinuous) > return : basix.finite_element.FiniteElement}}
 )";
 
+{{DOCTYPE}}
+    create_element__family_cell_degree_lvariant_dvariant_discontinuous
+    = R"(
+{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant, discontinuous) > doc}}
+
+Parameters
+==========
+{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant, discontinuous) > param > family : basix.ElementFamily}}
+{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant, discontinuous) > param > cell : basix.CellType}}
+{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant, discontinuous) > param > degree : int}}
+{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant, discontinuous) > param > lvariant : basix.LagrangeVariant}}
+{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant, discontinuous) > param > dvariant : basix.DPCVariant}}
+{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant, discontinuous) > param > discontinuous : bool}}
+
+Returns
+=======
+{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant, discontinuous) > return : basix.finite_element.FiniteElement}}
+)";
+
 {{DOCTYPE}} create_element__family_cell_degree_dvariant = R"(
 {{finite-element.h > create_element(family, cell, degree, dvariant) > doc}}
 
@@ -343,6 +362,22 @@ Parameters
 Returns
 =======
 {{finite-element.h > create_element(family, cell, degree, dvariant) > return : basix.finite_element.FiniteElement}}
+)";
+
+{{DOCTYPE}} create_element__family_cell_degree_lvariant_dvariant = R"(
+{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant) > doc}}
+
+Parameters
+==========
+{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant) > param > family : basix.ElementFamily}}
+{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant) > param > cell : basix.CellType}}
+{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant) > param > degree : int}}
+{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant) > param > lvariant : basix.LagrangeVariant}}
+{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant) > param > dvariant : basix.DPCVariant}}
+
+Returns
+=======
+{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant) > return : basix.finite_element.FiniteElement}}
 )";
 
 {{DOCTYPE}} create_element__family_cell_degree = R"(
