--- a/python/docs.h.template
+++ b/python/docs.h.template
@@ -285,7 +285,7 @@ Parameters
 
 Returns
 =======
-{{finite-element.h > create_element(family, cell, degree, discontinuous) > return : basix.finite_element.FiniteElement}}
+{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, entity_transformations, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > return : basix.finite_element.FiniteElement}}
 )";
 
 {{DOCTYPE}} create_element__family_cell_degree_discontinuous = R"(
