--- a/python/docs.h.template
+++ b/python/docs.h.template
@@ -267,25 +267,24 @@ Returns
 )";
 
 {{DOCTYPE}} create_custom_element = R"(
-{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, entity_transformations, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > doc}}
+{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > doc}}
 
 Parameters
 ==========
-{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, entity_transformations, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > cell_type : basix.CellType}}
-{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, entity_transformations, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > degree : int}}
-{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, entity_transformations, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > value_shape : List[int]}}
-{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, entity_transformations, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > wcoeffs : numpy.ndarray[numpy.float64]}}
-{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, entity_transformations, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > entity_transformations : dict}}
-{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, entity_transformations, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > x : List[List[numpy.ndarray[numpy.float64]]]}}
-{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, entity_transformations, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > M : List[List[numpy.ndarray[numpy.float64]]]}}
-{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, entity_transformations, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > map_type : basix.MapType}}
-{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, entity_transformations, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > discontinuous : bool}}
-{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, entity_transformations, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > highest_degree : int}}
-{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, entity_transformations, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > highest_complete_degree : int}}
+{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > cell_type : basix.CellType}}
+{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > degree : int}}
+{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > value_shape : List[int]}}
+{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > wcoeffs : numpy.ndarray[numpy.float64]}}
+{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > x : List[List[numpy.ndarray[numpy.float64]]]}}
+{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > M : List[List[numpy.ndarray[numpy.float64]]]}}
+{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > map_type : basix.MapType}}
+{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > discontinuous : bool}}
+{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > highest_degree : int}}
+{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > param > highest_complete_degree : int}}
 
 Returns
 =======
-{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, entity_transformations, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > return : basix.finite_element.FiniteElement}}
+{{finite-element.h > create_custom_element(cell_type, degree, value_shape, wcoeffs, x, M, map_type, discontinuous, highest_degree, highest_complete_degree) > return : basix.finite_element.FiniteElement}}
 )";
 
 {{DOCTYPE}} create_element__family_cell_degree_discontinuous = R"(
