Add HHJ element

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -96,6 +96,7 @@ set(HEADERS_basix
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-nedelec.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-raviart-thomas.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-regge.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-hhj.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-crouzeix-raviart.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-bubble.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-serendipity.h
@@ -120,6 +121,7 @@ target_sources(basix PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-nedelec.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-raviart-thomas.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-regge.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-hhj.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-crouzeix-raviart.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-bubble.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-serendipity.cpp)
