use default value for discontinuous rather than overloading

--- a/python/docs.h.template
+++ b/python/docs.h.template
@@ -318,21 +318,6 @@ Returns
 {{finite-element.h > create_element(family, cell, degree, lvariant, discontinuous) > return : basix.finite_element.FiniteElement}}
 )";
 
-{{DOCTYPE}} create_element__family_cell_degree_lvariant = R"(
-{{finite-element.h > create_element(family, cell, degree, lvariant) > doc}}
-
-Parameters
-==========
-{{finite-element.h > create_element(family, cell, degree, lvariant) > param > family : basix.ElementFamily}}
-{{finite-element.h > create_element(family, cell, degree, lvariant) > param > cell : basix.CellType}}
-{{finite-element.h > create_element(family, cell, degree, lvariant) > param > degree : int}}
-{{finite-element.h > create_element(family, cell, degree, lvariant) > param > lvariant : basix.LagrangeVariant}}
-
-Returns
-=======
-{{finite-element.h > create_element(family, cell, degree, lvariant) > return : basix.finite_element.FiniteElement}}
-)";
-
 {{DOCTYPE}} create_element__family_cell_degree_dvariant_discontinuous
     = R"(
 {{finite-element.h > create_element(family, cell, degree, dvariant, discontinuous) > doc}}
@@ -366,52 +351,7 @@ Parameters
 
 Returns
 =======
-{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant, discontinuous) > return : basix.finite_element.FiniteElement}}
-)";
-
-{{DOCTYPE}} create_element__family_cell_degree_dvariant = R"(
-{{finite-element.h > create_element(family, cell, degree, dvariant) > doc}}
-
-Parameters
-==========
-{{finite-element.h > create_element(family, cell, degree, dvariant) > param > family : basix.ElementFamily}}
-{{finite-element.h > create_element(family, cell, degree, dvariant) > param > cell : basix.CellType}}
-{{finite-element.h > create_element(family, cell, degree, dvariant) > param > degree : int}}
-{{finite-element.h > create_element(family, cell, degree, dvariant) > param > dvariant : basix.DPCVariant}}
-
-Returns
-=======
-{{finite-element.h > create_element(family, cell, degree, dvariant) > return : basix.finite_element.FiniteElement}}
-)";
-
-{{DOCTYPE}} create_element__family_cell_degree_lvariant_dvariant = R"(
-{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant) > doc}}
-
-Parameters
-==========
-{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant) > param > family : basix.ElementFamily}}
-{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant) > param > cell : basix.CellType}}
-{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant) > param > degree : int}}
-{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant) > param > lvariant : basix.LagrangeVariant}}
-{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant) > param > dvariant : basix.DPCVariant}}
-
-Returns
-=======
-{{finite-element.h > create_element(family, cell, degree, lvariant, dvariant) > return : basix.finite_element.FiniteElement}}
-)";
-
-{{DOCTYPE}} create_element__family_cell_degree = R"(
-{{finite-element.h > create_element(family, cell, degree) > doc}}
-
-Parameters
-==========
-{{finite-element.h > create_element(family, cell, degree) > param > family : basix.ElementFamily}}
-{{finite-element.h > create_element(family, cell, degree) > param > cell : basix.CellType}}
-{{finite-element.h > create_element(family, cell, degree) > param > degree : int}}
-
-Returns
-=======
-{{finite-element.h > create_element(family, cell, degree) > return : basix.finite_element.FiniteElement}}
+{{finite-element.h > create_element(family, cell, degree, dvariant, discontinuous) > return : basix.finite_element.FiniteElement}}
 )";
 
 {{DOCTYPE}} compute_interpolation_operator = R"(
