--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    name: Build and test
+    name: Build and test (Red Hat)
     runs-on: ubuntu-20.04
     container: fenicsproject/test-env:latest-redhat
 
