--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -1,8 +1,8 @@
+name: Basix CI
+
 # This workflow will install Python dependencies, run tests and lint
 # with a single version of Python For more information see:
 # https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
-name: Basix CI
 
 on:
   push:
@@ -18,10 +18,9 @@ on:
 jobs:
   build:
     name: Build and test
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest]
         python-version: ['3.8', '3.9', '3.10']
 
     steps:
@@ -30,13 +29,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies (non-Python, Linux)
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get install -y doxygen libopenblas-dev liblapack-dev ninja-build
-      - name: Install dependencies (non-Python, macOS)
-        if: runner.os == 'macOS'
-        run: brew install ninja
+      - name: Install dependencies
+        sudo apt-get install -y doxygen libopenblas-dev liblapack-dev ninja-build
 
       - name: Install Basix
         run: pip -v install .[ci]
@@ -62,7 +56,6 @@ jobs:
           pytest demo/python/test.py
 
       - name: Build documentation
-        if: runner.os == 'Linux'
         run: |
           pip install git+https://github.com/FEniCS/ufl.git
           export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
@@ -72,7 +65,6 @@ jobs:
           make html
 
       - name: Upload C++ documentation artifact
-        if: runner.os == 'Linux'
         uses: actions/upload-artifact@v2
         with:
           name: doc-cpp
@@ -81,7 +73,6 @@ jobs:
           retention-days: 2
           if-no-files-found: error
       - name: Upload Python documentation artifact
-        if: runner.os == 'Linux'
         uses: actions/upload-artifact@v2
         with:
           name: doc-python
@@ -91,38 +82,37 @@ jobs:
           if-no-files-found: error
 
       - name: Build website documentation
-        if: runner.os == 'Linux'
         run: |
           export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
           cd doc/web
           python make_html.py
 
       - name: Set version name
-        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) }}
         run: |
           echo "VERSION_NAME=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Build documentation to upload
-        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) }}
         run: |
           export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
           cd doc/web
           python make_html.py --url https://docs.fenicsproject.org/basix/${{ env.VERSION_NAME }}
       - name: Checkout FEniCS/docs
-        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) }}
         uses: actions/checkout@v2
         with:
           repository: "FEniCS/docs"
           path: "docs"
           ssh-key: "${{ secrets.SSH_GITHUB_DOCS_PRIVATE_KEY }}"
       - name: Copy documentation into repository
-        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) }}
         run: |
           cd docs
           git rm -r --ignore-unmatch basix/${{ env.VERSION_NAME }}
           mkdir -p basix/${{ env.VERSION_NAME }}
           cp -r ../doc/web/html/* basix/${{ env.VERSION_NAME }}
       - name: Commit and push documentation to FEniCS/docs
-        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
+        if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) }}
         run: |
           cd docs
           git config --global user.email "fenics@github.com"
