--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -1,5 +1,7 @@
 name: Red Hat clone
 
+# This workflow will test Basix on Red Hat
+
 on:
   schedule:
     # '*' is a special character in YAML, so string must be quoted
