--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -6,7 +6,7 @@ on:
     - cron: "0 2 * * TUE"
   pull_request:
     branches:
-      - main  
+      - main
   workflow_dispatch: ~
 
 jobs:
@@ -20,6 +20,7 @@ jobs:
 
       - name: Install Basix
         run: |
+          export CPATH=/usr/include/openblas
           python3 -m pip install .[test]
 
       - name: Run units tests
