--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -88,11 +88,11 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
-          repository_url: https://pypi.org/legacy/
+          repository_url: https://upload.pypi.org/legacy/
 
       - uses: pypa/gh-action-pypi-publish@v1.5.0
         if: ${{ github.event.inputs.pypi_publish }}
         with:
           user: __token__
           password: ${{ secrets.PYPI_TEST_TOKEN }}
-          repository_url: https://test.pypi.org/legacy/
+          repository_url: https://upload.test.pypi.org/legacy/
